# mlops-model-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: aws-audit.yml  build.yml  ci.yml  cleanup-images.yml  deploy.yml  pipeline.yml
docker/: .dockerignore  Dockerfile
docs/: mac-mini-infra.md  model-versioning.md  monitoring.md  swapping-models.md  workflow.md
kubernetes/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  prometheusrule.yaml  service.yaml  servicemonitor.yaml
kubernetes/cloudflared/: configmap.yaml  deployment.yaml
kubernetes/mlflow/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
kubernetes/monitoring/: ingress.yaml
kubernetes/overlays/production/: kustomization.yaml
kubernetes/overlays/staging/: kustomization.yaml
monitoring/grafana/dashboards/: model-service.json
scripts/: aws-audit.sh  sync-secrets.sh
src/api/: main.py  schemas.py
src/models/: interface.py  iris_classifier.py
src/monitoring/: metrics.py
tests/: conftest.py  test_api.py  test_model.py
training/: train_iris.py
